# pylint-silent

./: .gitignore  README.md  pyproject.toml  setup.py  tox.ini
.github/workflows/: run_tests.yml
pylint_silent/: __init__.py  __main__.py  version.py
tests/: sAmple_1.py  sAmple_1.py_mixed_stats  sAmple_1.py_stats  sAmple_1_after_apply.py  sAmple_1_after_apply_mixed.py  sAmple_1_after_apply_w_signature.py  sample_1.py  sample_1.py_stats  sample_1_after_apply.py  sample_1_after_apply_mixed.py  sample_1_after_apply_w_signature.py  sample_2.py  sample_2.py_stats  sample_2_after_reset.py  test_sample_1.py  test_samples.py
