[build-system]
requires = ["setuptools >= 60", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pylint-silent"
description = "Automatically add code comments to silence the output of pylint"
authors = [
    {name = "Udi Fuchs", email = "udifuchs@gmail.com"},
]
requires-python = ">=3.7"
license = {text = "GPL-2.0-or-later"}
classifiers = [
    "Topic :: Software Development :: Quality Assurance",
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "License :: OSI Approved :: GNU General Public License v2 or later (GPLv2+)",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
]
keywords = ["pylint"]
readme = "README.md"
dynamic = ["version"]

[project.urls]
"Homepage" = "http://github.com/udifuchs/pylint-silent"

[project.scripts]
pylint-silent = "pylint_silent.__main__:main"

[tool.setuptools]
packages = ["pylint_silent"]

[tool.setuptools.dynamic]
version = {attr = "pylint_silent.VERSION"}
