[build-system]
requires = ["setuptools >= 60", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pylint-silent"
description = "Automatically add code comments to silence the output of pylint"
authors = [
    {name = "Udi Fuchs", email = "udifuchs@gmail.com"},
]
requires-python = ">=3.8"
license = {text = "GPL-2.0-or-later"}
classifiers = [
    "Topic :: Software Development :: Quality Assurance",
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "License :: OSI Approved :: GNU General Public License v2 or later (GPLv2+)",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
]
keywords = ["pylint"]
readme = "README.md"
dynamic = ["version"]

[project.urls]
"Homepage" = "http://github.com/udifuchs/pylint-silent"

[project.scripts]
pylint-silent = "pylint_silent.__main__:main"

[tool.setuptools]
packages = ["pylint_silent"]

[tool.setuptools.dynamic]
version = {attr = "pylint_silent.VERSION"}

[tool.mypy]
enable_error_code = "ignore-without-code"
strict = true

[tool.ruff.lint]
select = [
    "F",  # pyflakes
    "E",  # pycodestyle
    "W",  # pycodestyle
    "N",  # pep8-naming
    "UP",  # pyupgrade
    "B",  # flake-bugbear
    "G",  # flake8-logging-format
    "PIE",  # flake-pie
    "PT",  # flake8-pytest-style
    "Q",  # flake8-quotes
    "RET",  # flake8-return
    "SIM",  # flake8-simplify
    "PL",  # pylint
    "RUF",  # ruff
]

ignore = [
    "UP015",  # Unnecessary open mode parameters
    "PLR2004",  # Magic value used in comparison, consider replacing {value} with a constant variable
    "PLW2901",  # Outer {outer_kind} variable {name} overwritten by inner {inner_kind} target
]
